RESOLVED FIXED77733
[Chromium] Context menu on password field should not have search options
https://bugs.webkit.org/show_bug.cgi?id=77733
Summary [Chromium] Context menu on password field should not have search options
Bernhard Bauer
Reported 2012-02-03 06:38:13 PST
[Chromium] Context menu on password field should not have search options
Attachments
Patch (1.69 KB, patch)
2012-02-03 06:39 PST, Bernhard Bauer
no flags
Bernhard Bauer
Comment 1 2012-02-03 06:39:26 PST
Bernhard Bauer
Comment 2 2012-02-03 06:41:23 PST
See http://crbug.com/112498: "The context menu when selecting text in an input type=password field has an option to use "Search Google For"; that option should not be there. It simply searches google for a few dot characters."
jochen
Comment 3 2012-02-06 07:27:35 PST
LGTM
Adam Barth
Comment 4 2012-02-06 14:10:55 PST
Comment on attachment 125317 [details] Patch Should we write a unit test for this bug? Maybe we should have a test in Chromium-land for it?
Bernhard Bauer
Comment 5 2012-02-06 14:20:54 PST
TBH, I'm not sure how we would write a non-flaky (in the way that interactive_ui_tests is flaky) test for this :-/
jochen
Comment 6 2012-02-08 11:50:39 PST
Comment on attachment 125317 [details] Patch I guess it should be possible to write a non-flaky browser test in chromium for this
Bernhard Bauer
Comment 7 2012-02-08 11:51:47 PST
SGTM.
WebKit Review Bot
Comment 8 2012-02-08 12:16:36 PST
Comment on attachment 125317 [details] Patch Clearing flags on attachment: 125317 Committed r107115: <http://trac.webkit.org/changeset/107115>
WebKit Review Bot
Comment 9 2012-02-08 12:16:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.