[Chromium] Don't add selection from password fields to context menu. https://bugs.webkit.org/show_bug.cgi?id=77733

Patch by Bernhard Bauer <bauerb@google.com> on 2012-02-08
Reviewed by Adam Barth.

* src/ContextMenuClientImpl.cpp:
(WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):

Canonical link: https://commits.webkit.org/95027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107115 268f45cc-cd09-0410-ab3c-d52691b4dbfc